Adding GraphView and Javaluator to graph and solve

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -27,12 +26,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation("com.github.bumptech.glide:glide:4.8.0") {
+    implementation('com.github.bumptech.glide:glide:4.8.0') {
         exclude group: "com.android.support"
     }
     //noinspection GradleCompatible
-    implementation "com.android.support:support-fragment:26.1.0"
+    implementation 'com.android.support:support-fragment:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.jjoe64:graphview:4.2.2'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
-
-
+    implementation files('libs/javaluator-3.0.0.jar')
 }
