--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.jjoe64:graphview:4.2.2'
+    compile "com.androidplot:androidplot-core:1.5.6"
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
     implementation files('libs/javaluator-3.0.0.jar')
+    implementation files('libs/exp4j-0.4.8.jar')
 }
