--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -27,7 +27,12 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Historial" />
         <activity android:name=".Graficar" />
-        <activity android:name=".Grafica"></activity>
+        <activity android:name=".Grafica" />
+        <activity android:name=".Graph" />
+        <activity
+            android:name=".Inicio"
+            android:label="@string/title_activity_inicio"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
